Updated (body) modal > removed position fixed and overflow

--- a/src/assets/scss/components/modal.scss
+++ b/src/assets/scss/components/modal.scss
@@ -88,7 +88,7 @@
 }
 
 body.modal-open {
-	overflow: hidden !important;
+	// overflow: hidden !important;
 	// position: fixed;
 	.cart-modal {
 		// pointer-events: none;
