--- a/src/assets/scss/components/product.scss
+++ b/src/assets/scss/components/product.scss
@@ -1,7 +1,7 @@
 
 body.modal-open {
-  overflow: hidden;
-  position: fixed;
+	// overflow: hidden;
+	// position: fixed;
 
 	@media  (min-width: $screen-sm) {
 		position: relative;
